src/tests/variable-declarations/30.txt
variable-declarations/30.c:3:6: error: array type has incomplete element type in 'arr2'
 	int (* const(* const arr2)[4][2])[][] = &arr;
 	    ^
variable-declarations/30.c:4:43: warning: initialization from incompatible pointer type, expected 'int (*const (*const)[4][2])[][3]' but got 'int (*)[1][3]'
 	int (* const(* const arr3)[4][2])[][3] = &arr;
 	                                         ^
